# BlenderAgent

./: .gitignore  AGENTS.md  PLAN.md  PLAN_LIVE.md  PLAN_RENDER.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: APPROVED_CONTRIBUTORS  oss-weekend.json
.github/workflows/: openclaw-gate.yml  oss-weekend-issues.yml  pr-gate.yml
.pi/agents/: CHANGELOG.md  CREATE.md
.pi/agents/CREATE/: execute_blender.py  execute_blender_edit.py  inspect_blend.py  render_blend.py
.pi/prompts/: is.md  pr.md  wr.md
apps/desktop/: README.md  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
outputs/20260226_011258/: full_script.py  model.blend  model.blend1
outputs/20260226_011258/iteration_01/: full_script.py  render_script.py  script.py
outputs/20260226_011258/iteration_02/: render_script.py  script.py
outputs/coffee_table_20260225/: script.py
outputs/coffee_table_20260225/iteration_01/: full_script.py  model.blend
outputs/coffee_table_20260225/iteration_02/: full_script.py  model.blend
outputs/coffee_table_20260226_003552/: full_script.py  model.blend  model.blend1  prompt.txt
outputs/coffee_table_20260226_005147/: model.blend
outputs/coffee_table_20260226_010244/: model.blend  script.py
outputs/teahouse_20260226_012309/: model.blend  model.blend1  prompt.txt  script.py
scripts/: oss-weekend.mjs
(+31 files in other folders)
